agent-backend/kubernetes/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vector-db
  namespace: webapp-dev
  labels:
    app: vector-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vector-db
  template:
    metadata:
      labels:
        app: vector-db
    spec:
      containers:
        - name: vector-db
          image: gcr.io/tag-monitoring-dev/vector-db
          resources:
            requests:
              memory: "500Mi"
              cpu: "50m"
            limits:
              memory: "1000Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: vector-db
  namespace: webapp-dev
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: vector-db
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8001
  type: NodePort
  externalTrafficPolicy: Local
