agent-backend/kubernetes/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vector-db
  namespace: webapp-dev
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: vector-db
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8001
  type: NodePort
  externalTrafficPolicy: Local
